# Exdiary

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  AGENT-DESIGN.md  AGENT-DESIGN_v2.md  ANALYZE-DESIGN.md  ARCHITECTURE-agent.md  ARCHITECTURE-lib.md  ARCHITECTURE-overview.md  ARCHITECTURE-routes.md  ATTACHMENT-DESIGN.md  BRANCH-DESIGN.md  ENGINEERING-PLAN.md  MODE-DESIGN.md  PAPER-RAG-DESIGN.md  REFACTOR-DESIGN.md  SQLITE-DESIGN.md  SYNC-DESIGN.md  THREAD-DESIGN.md  UX-IMPROVEMENTS.md  VISION.md  app.py  app_doc.md  config.yaml  pyproject.toml  run.bat  test_agent_v2.py  改动.md
.claude/: settings.local.json
.claude/git-sync/: SKILL.md
.github/workflows/: ci.yml
design-explorations/: analysis hub.html  chat.html  experiment list.html  favorites.html  home.html  home2.html  timeline.html
experiment_templates/: ball-milling.yaml  electrochemistry.yaml  hydrothermal.yaml  perovskite-solar.yaml  photocatalysis.yaml  sol-gel.yaml  spin-coating.yaml  xrd.yaml
lib/: __init___doc.md  agent.py  agent_factory.py  agent_factory_doc.md  agent_v2.py  agent_v2_doc.md  analyzer.py  analyzer_doc.md  auth_doc.md  debug.py  debug_doc.md  llm.py  llm_doc.md  logger.py  logger_doc.md  parser.py  parser_doc.md  resolver.py  storage.py
lib/core/: __init___doc.md  agent_tools.py  agent_tools_doc.md  (+8 more)
routes/: __init___doc.md  api_agent.py  api_agent_doc.md  api_analysis.py  api_analysis_doc.md  api_auth_doc.md  api_child.py  api_child_doc.md  api_experiment.py  api_experiment_doc.md  api_favorites.py  api_favorites_doc.md  api_search.py  api_search_doc.md  api_sync_doc.md  api_upload.py  api_upload_doc.md  dashboard.py  dashboard_doc.md  experiment.py  experiment_doc.md  pages.py  pages_doc.md  settings.py  settings_doc.md  templates.py  templates_doc.md  uploads.py  uploads_doc.md
sync/: __init___doc.md  backup_doc.md  sync_service_doc.md
templates/: _selector_scripts.html  _selector_styles.html  analysis_detail.html  analyze.html  base.html  compare.html  edit.html  experiments.html  favorites.html  index.html  new.html  print.html  settings.html  templates.html  timeline.html  view.html
tests/: __init___doc.md  conftest.py  conftest_doc.md  test_agent_v2.py  test_agent_v2_doc.md
(+36 files in other folders)
