[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "exdiary"
version = "2.0.0"
description = "材料科学实验记录管理系统 — 基于 LLM Agent 的对话式实验记录、分析与检索"
readme = "ENGINEERING-PLAN.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "pyyaml>=6.0",
    "openai>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
desktop = [
    "pywebview>=5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.5",
    "pre-commit>=3.0",
]

[project.scripts]
exdiary = "app:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort (import ordering)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

# Per-module strictness (progressively adopt)
[[tool.mypy.overrides]]
module = [
    "lib.core.*",
    "lib.llm",
    "lib.repositories.base",
    "lib.services.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "lib.repositories.yaml_experiment",
    "lib.repositories.yaml_analysis",
    "lib.repositories.yaml_thread",
    "lib.repositories.yaml_favorites",
    "lib.repositories.yaml_update_log",
    "lib.agent_v2",
    "routes.*",
]
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
